<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/switch_thumb_normal_material_dark"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Portfolio">

    <TextView android:text="@string/welcome_text" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent_material_light"
        android:text="@string/project1"
        android:id="@+id/music"
        android:layout_gravity="center_vertical"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:onClick="navigate"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent_material_light"
        android:text="@string/project2"
        android:id="@+id/sports"
        android:layout_below="@+id/music"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:onClick="navigate"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent_material_light"
        android:text="@string/project3"
        android:id="@+id/movies"
        android:layout_below="@+id/sports"
        android:layout_marginTop="5dp"
        android:onClick="navigate"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent_material_light"
        android:text="@string/project4"
        android:id="@+id/fun"
        android:layout_below="@+id/movies"
        android:layout_marginTop="5dp"
        android:onClick="navigate"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent_material_light"
        android:text="@string/project5"
        android:id="@+id/reader"
        android:layout_below="@+id/fun"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:onClick="navigate"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/abc_input_method_navigation_guard"
        android:textColor="@color/abc_primary_text_disable_only_material_dark"
        android:text="@string/project6"
        android:id="@+id/capstone"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/reader"
        android:onClick="navigate"/>

</RelativeLayout>
